milestone 1: exclude pinned setting

--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -11,6 +11,12 @@
         <h1>nufftabs</h1>
         <p class="subtitle">Saved tabs</p>
       </header>
+      <section class="settings">
+        <label class="setting">
+          <input id="excludePinned" type="checkbox" />
+          <span>Exclude pinned tabs</span>
+        </label>
+      </section>
       <section>
         <div id="empty" class="empty">No saved tabs yet.</div>
         <ul id="list" class="list"></ul>
