milestone 2: restore all + delete all

--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -17,6 +17,10 @@
           <span>Exclude pinned tabs</span>
         </label>
       </section>
+      <section class="bulk-actions">
+        <button id="restoreAll" type="button">Restore all</button>
+        <button id="deleteAll" type="button" class="secondary">Delete all</button>
+      </section>
       <section>
         <div id="empty" class="empty">No saved tabs yet.</div>
         <ul id="list" class="list"></ul>
