refactor: use nufftabs page instead of options

--- a/entrypoints/nufftabs.html
+++ b/entrypoints/nufftabs.html
@@ -34,6 +34,6 @@
       </section>
       <div id="status" class="status" role="status" aria-live="polite"></div>
     </main>
-    <script type="module" src="./index.ts"></script>
+    <script type="module" src="./nufftabs.ts"></script>
   </body>
 </html>
