chore: split options from list page

--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -11,12 +11,6 @@
         <h1>nufftabs</h1>
         <p class="subtitle">Saved tabs</p>
       </header>
-      <section class="settings">
-        <label class="setting">
-          <input id="excludePinned" type="checkbox" />
-          <span>Exclude pinned tabs</span>
-        </label>
-      </section>
       <section class="bulk-actions">
         <button id="restoreAll" type="button">Restore all</button>
         <button id="deleteAll" type="button" class="secondary">Delete all</button>
@@ -34,6 +28,6 @@
       </section>
       <div id="status" class="status" role="status" aria-live="polite"></div>
     </main>
-    <script type="module" src="./nufftabs.ts"></script>
+    <script type="module" src="./index.ts"></script>
   </body>
 </html>
