--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -12,8 +12,30 @@
         <p class="subtitle">Saved tabs</p>
       </header>
       <section class="bulk-actions">
-        <button id="restoreAll" type="button">Restore all</button>
-        <button id="deleteAll" type="button" class="secondary">Delete all</button>
+        <button
+          id="restoreAll"
+          type="button"
+          class="icon-button"
+          aria-label="Restore all"
+          title="Restore all"
+        >
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <rect x="4" y="7" width="10" height="8" rx="1.5" />
+            <rect x="7" y="5" width="10" height="8" rx="1.5" />
+            <path d="M14 16h5m0 0-2-2m2 2-2 2" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </button>
+        <button
+          id="deleteAll"
+          type="button"
+          class="icon-button danger"
+          aria-label="Delete all"
+          title="Delete all"
+        >
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M6 7h12m-9 0V5h6v2m-7 0 1 12h8l1-12" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </button>
       </section>
       <section>
         <div id="empty" class="empty">No saved tabs yet.</div>
