ui: list rows and icon buttons

--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -40,7 +40,7 @@
         </div>
       </header>
       <main class="content">
-        <section>
+        <section class="list-section">
           <div id="empty" class="empty">No saved tabs yet.</div>
           <ul id="list" class="list"></ul>
         </section>
