--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -37,6 +37,17 @@
               <path d="M6 7h12m-9 0V5h6v2m-7 0 1 12h8l1-12" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </button>
+          <button
+            id="toggleIo"
+            type="button"
+            class="icon-button"
+            aria-label="Export and import"
+            title="Export and import"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M4 6h10M4 12h16M4 18h10" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </button>
         </div>
       </header>
       <main class="content">
@@ -44,14 +55,15 @@
           <div id="empty" class="empty">No saved tabs yet.</div>
           <ul id="list" class="list"></ul>
         </section>
-        <section class="io">
-          <div class="io-actions">
-            <button id="exportJson" type="button">Export JSON</button>
-            <button id="importJson" type="button" class="secondary">Import JSON (replace)</button>
-          </div>
+        <section id="ioPanel" class="io-panel" hidden>
+          <div class="io-header">Export / Import</div>
           <textarea id="jsonArea" rows="8" spellcheck="false"></textarea>
+          <div class="io-actions">
+            <button id="exportJson" type="button" class="text-button">Export</button>
+            <button id="importJson" type="button" class="text-button danger">Import (replace)</button>
+          </div>
         </section>
-        <div id="status" class="status" role="status" aria-live="polite"></div>
+        <div id="snackbar" class="snackbar" role="status" aria-live="polite"></div>
       </main>
     </div>
     <script type="module" src="./index.ts"></script>
