--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -52,7 +52,13 @@
       </header>
       <main class="content">
         <section class="list-section">
-          <div id="empty" class="empty">No saved tabs yet.</div>
+          <div id="empty" class="empty">
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <rect x="4" y="6" width="14" height="10" rx="2" />
+              <path d="M7 9h8M7 12h5" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+            </svg>
+            <div>No saved tabs</div>
+          </div>
           <ul id="list" class="list"></ul>
         </section>
         <section id="ioPanel" class="io-panel" hidden>
