--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -21,9 +21,10 @@
             title="Restore all"
           >
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <rect x="4" y="7" width="10" height="8" rx="1.5" />
-              <rect x="7" y="5" width="10" height="8" rx="1.5" />
-              <path d="M14 16h5m0 0-2-2m2 2-2 2" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M6 6h8a2 2 0 0 1 2 2v6H6a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2Z" fill="currentColor"/>
+              <path d="M9 4h8a2 2 0 0 1 2 2v6H9a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Z" fill="currentColor" opacity="0.7"/>
+              <path d="M14 18h5l-2.5-2.5L14 18Z" fill="currentColor"/>
+              <rect x="13" y="16.5" width="8" height="3" rx="1.5" fill="currentColor"/>
             </svg>
           </button>
           <button
@@ -34,7 +35,9 @@
             title="Delete all"
           >
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M6 7h12m-9 0V5h6v2m-7 0 1 12h8l1-12" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M8 6h8l-1 14H9L8 6Z" fill="currentColor"/>
+              <rect x="7" y="6" width="10" height="2" rx="1" fill="currentColor"/>
+              <rect x="10" y="4" width="4" height="2" rx="1" fill="currentColor"/>
             </svg>
           </button>
           <button
@@ -45,7 +48,9 @@
             title="Export and import"
           >
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M4 6h10M4 12h16M4 18h10" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <rect x="4" y="5" width="12" height="3" rx="1.5" fill="currentColor"/>
+              <rect x="4" y="11" width="16" height="3" rx="1.5" fill="currentColor"/>
+              <rect x="4" y="17" width="12" height="3" rx="1.5" fill="currentColor"/>
             </svg>
           </button>
         </div>
