--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -21,10 +21,10 @@
             title="Restore all"
           >
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M6 6h8a2 2 0 0 1 2 2v6H6a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2Z" fill="currentColor"/>
-              <path d="M9 4h8a2 2 0 0 1 2 2v6H9a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Z" fill="currentColor" opacity="0.7"/>
-              <path d="M14 18h5l-2.5-2.5L14 18Z" fill="currentColor"/>
-              <rect x="13" y="16.5" width="8" height="3" rx="1.5" fill="currentColor"/>
+              <rect x="4" y="7" width="9" height="8" rx="2" fill="currentColor" opacity="0.45"/>
+              <rect x="7" y="5" width="9" height="8" rx="2" fill="currentColor" opacity="0.7"/>
+              <rect x="13" y="11" width="6" height="2" rx="1" fill="currentColor"/>
+              <path d="M18 8l4 4-4 4z" fill="currentColor"/>
             </svg>
           </button>
           <button
@@ -35,9 +35,9 @@
             title="Delete all"
           >
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M8 6h8l-1 14H9L8 6Z" fill="currentColor"/>
-              <rect x="7" y="6" width="10" height="2" rx="1" fill="currentColor"/>
-              <rect x="10" y="4" width="4" height="2" rx="1" fill="currentColor"/>
+              <rect x="6" y="8" width="12" height="12" rx="2" fill="currentColor"/>
+              <rect x="5" y="6" width="14" height="2" rx="1" fill="currentColor"/>
+              <rect x="9" y="4" width="6" height="2" rx="1" fill="currentColor"/>
             </svg>
           </button>
           <button
