--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -72,6 +72,7 @@
           <div class="io-actions">
             <button id="exportJson" type="button" class="text-button">Export</button>
             <button id="importJson" type="button" class="text-button danger">Import (replace)</button>
+            <button id="importOneTab" type="button" class="text-button">Import OneTab</button>
           </div>
         </section>
         <div id="snackbar" class="snackbar" role="status" aria-live="polite"></div>
