ui: show total tab count in header

--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -10,7 +10,7 @@
       <header class="app-bar">
         <div>
           <h1>nufftabs</h1>
-          <p class="subtitle">Saved tabs</p>
+          <p class="subtitle"><span id="tabCount">0</span> saved tabs</p>
         </div>
         <div class="app-actions">
           <button
