--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -14,6 +14,28 @@
         </div>
         <div class="app-actions">
           <button
+            id="scrollTop"
+            type="button"
+            class="icon-button"
+            aria-label="Scroll to top"
+            title="Scroll to top"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M12 6l6 6H6z" fill="currentColor"/>
+            </svg>
+          </button>
+          <button
+            id="scrollBottom"
+            type="button"
+            class="icon-button"
+            aria-label="Scroll to bottom"
+            title="Scroll to bottom"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M6 12l6 6 6-6z" fill="currentColor"/>
+            </svg>
+          </button>
+          <button
             id="restoreAll"
             type="button"
             class="icon-button"
