--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -94,8 +94,10 @@
           <div class="io-actions">
             <button id="exportJson" type="button" class="text-button">Export</button>
             <button id="importJson" type="button" class="text-button danger">Import (replace)</button>
+            <button id="importFile" type="button" class="text-button">Import file</button>
             <button id="importOneTab" type="button" class="text-button">Import OneTab</button>
           </div>
+          <input id="importFileInput" type="file" accept="application/json" hidden />
         </section>
         <div id="snackbar" class="snackbar" role="status" aria-live="polite"></div>
       </main>
