ui: add clear button for import area

--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -96,6 +96,7 @@
             <button id="importJson" type="button" class="text-button danger">Import (replace)</button>
             <button id="importFile" type="button" class="text-button">Import file</button>
             <button id="importOneTab" type="button" class="text-button">Import OneTab</button>
+            <button id="clearJson" type="button" class="text-button">Clear</button>
           </div>
           <input id="importFileInput" type="file" accept="application/json" hidden />
         </section>
