feat: group condensed tabs by window

--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -36,33 +36,6 @@
             </svg>
           </button>
           <button
-            id="restoreAll"
-            type="button"
-            class="icon-button"
-            aria-label="Restore all"
-            title="Restore all"
-          >
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <rect x="4" y="7" width="9" height="8" rx="2" fill="currentColor" opacity="0.45"/>
-              <rect x="7" y="5" width="9" height="8" rx="2" fill="currentColor" opacity="0.7"/>
-              <rect x="13" y="11" width="6" height="2" rx="1" fill="currentColor"/>
-              <path d="M18 8l4 4-4 4z" fill="currentColor"/>
-            </svg>
-          </button>
-          <button
-            id="deleteAll"
-            type="button"
-            class="icon-button danger"
-            aria-label="Delete all"
-            title="Delete all"
-          >
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <rect x="6" y="8" width="12" height="12" rx="2" fill="currentColor"/>
-              <rect x="5" y="6" width="14" height="2" rx="1" fill="currentColor"/>
-              <rect x="9" y="4" width="6" height="2" rx="1" fill="currentColor"/>
-            </svg>
-          </button>
-          <button
             id="toggleIo"
             type="button"
             class="icon-button"
@@ -86,7 +59,7 @@
             </svg>
             <div>No saved tabs</div>
           </div>
-          <ul id="list" class="list"></ul>
+          <div id="groups" class="group-list"></div>
         </section>
         <section id="ioPanel" class="io-panel" hidden>
           <div class="io-header">Export / Import</div>
