ui: update scroll arrow icons

--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -21,7 +21,7 @@
             title="Scroll to top"
           >
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M12 6l6 6H6z" fill="currentColor"/>
+              <path d="M12 4l5 5h-3v11h-4V9H7z" fill="currentColor"/>
             </svg>
           </button>
           <button
@@ -32,7 +32,7 @@
             title="Scroll to bottom"
           >
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M6 12l6 6 6-6z" fill="currentColor"/>
+              <path d="M12 20l-5-5h3V4h4v11h3z" fill="currentColor"/>
             </svg>
           </button>
           <button
