fix: JSON import appends instead of replaces

--- a/entrypoints/nufftabs/index.html
+++ b/entrypoints/nufftabs/index.html
@@ -56,7 +56,8 @@
           <textarea id="jsonArea" rows="8" spellcheck="false"></textarea>
           <div class="io-actions">
             <button id="exportJson" type="button" class="text-button">Export</button>
-            <button id="importJson" type="button" class="text-button danger">Import (replace)</button>
+            <button id="importJson" type="button" class="text-button">Import</button>
+            <button id="importJsonReplace" type="button" class="text-button danger">Import (replace)</button>
             <button id="importFile" type="button" class="text-button">Import file</button>
             <button id="importOneTab" type="button" class="text-button">Import OneTab</button>
             <button id="clearJson" type="button" class="text-button">Clear</button>
