feat: make restore batch size configurable

--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -16,6 +16,10 @@
           <input id="excludePinned" type="checkbox" />
           <span>Exclude pinned tabs</span>
         </label>
+        <label class="setting">
+          <span>Tabs per restore window</span>
+          <input id="restoreBatchSize" type="number" min="1" step="1" />
+        </label>
       </section>
       <div id="status" class="status" role="status" aria-live="polite"></div>
     </main>
