fix: make restore batch size optional

--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -18,7 +18,7 @@
         </label>
         <label class="setting">
           <span>Tabs per restore window</span>
-          <input id="restoreBatchSize" type="number" min="1" step="1" />
+          <input id="restoreBatchSize" type="number" min="1" step="1" placeholder="100" />
         </label>
       </section>
       <div id="status" class="status" role="status" aria-live="polite"></div>
